src/objects/FieloPLT__ChallengeReward__c.object
<CustomObject>
    <fields>
        <fullName>RebateConversionMode__c</fullName>
        <description>Rebate Conversion Mode</description>
        <label>Rebate Conversion Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Value</fullName>
                </value>
                <value>
                    <fullName>Factor</fullName>
                </value>
                <value>
                    <fullName>Multiplier</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RebateConversionValue__c</fullName>
        <description>Rebate Conversion Value</description>
        <label>Rebate Conversion Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RebateFieldName__c</fullName>
        <description>Rebate Field Name</description>
        <label>Rebate Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>